# lzxinstaller

./: .gitmodules  2020-11-14-1803_meta.7z  CMakeLists.txt  CPackLinuxDeployQt.cmake.in  Jenkinsfile  LICENSE  Packaging.cmake  README.md
components/lzxcore-tbc2-base/: CMakeLists.txt
components/lzxdfu/: CMakeLists.txt
components/lzxplnx/: CMakeLists.txt
firmware/lzxcore-tbc2-base/: CMakeLists.txt
firmware/lzxplnx/: CMakeLists.txt
lib/dfu/arm/: dfu-prefix  dfu-suffix  dfu-util
lib/dfu/linux32/: dfu-prefix  dfu-suffix  dfu-util
lib/dfu/linux64/: dfu-prefix  dfu-suffix  dfu-util
lib/nodeeditor/: CMakeLists.txt
lzxpatch/: 1.0.0bin.7z.sha1  1.0.0meta.7z
lzxterm/: 1.0.0bin.7z.sha1
repo/: Updates.xml
repo/lzxgui/: 1.0.0bin.7z.sha1  1.0.0meta.7z
repo/lzxterm/: 1.0.0meta.7z
res/: lzx.icns
resources/: firmware.qrc  lzx.desktop  states.scxml  stills.qrc  window.rc
resources/firmware/tbc2/: lzxcore-tbc2-base.bit  lzxcore-tbc2-base.elf
src/: firmwareupdatedialog.cpp  firmwareupdatedialog.h  firmwareupdatedialog.ui  lzx_en_US.ts  lzxdfu_en_US.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
