cmake_minimum_required(VERSION 3.3)

set(MY_COMPONENT_NAME lzxcore-tbc2-base)
set(MY_COMPONENT_DESCRIPTION "LZX TBC2 Base Core")
set(MY_COMPONENT_VERSION 0.1.0)
    
cpack_add_component(${MY_COMPONENT_NAME} VERSION ${MY_COMPONENT_VERSION} DISPLAY_NAME ${MY_COMPONENT_DESCRIPTION} DESCRIPTION ${MY_COMPONENT_DESCRIPTION})  

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/lzxcore-tbc2-base.bit ${CMAKE_CURRENT_SOURCE_DIR}/lzxcore-tbc2-base.elf COMPONENT ${MY_COMPONENT_NAME} DESTINATION ${MY_COMPONENT_NAME})    

cpack_ifw_configure_component(${MY_COMPONENT_NAME} 
    DISPLAY_NAME ${MY_COMPONENT_NAME} 
    DESCRIPTION ${MY_COMPONENT_DESCRIPTION}
    VERSION ${MY_COMPONENT_VERSION}
)
