cmake_minimum_required(VERSION 3.3)

install(FILES *.bit *.elf DESTINATION lzxcore-tbc2-base COMPONENT lzxcore-tbc2-base)

set(CPACK_COMPONENTS_ALL ${CPACK_COMPONENTS_ALL} lzxcore-tbc2-base)

set(CPACK_COMPONENT_LZXCORE-TBC2-BASE_DISPLAY_NAME "LZX TBC2 Base")
set(CPACK_COMPONENT_LZXCORE-TBC2-BASE_DESCRIPTION "Base firmware for TBC2.")
set(CPACK_COMPONENT_LZXCORE-TBC2-BASE_DEPENDS lzxplnx)
set(CPACK_COMPONENT_LZXCORE-TBC2-BASE_GROUP "Firmware")