cmake_minimum_required(VERSION 3.3)


set(MY_COMPONENT_NAME lzxdfu)
set(MY_COMPONENT_DESCRIPTION "LZX Firmware Update Utility")
set(MY_COMPONENT_VERSION 0.1.0)
    
cpack_add_component(${MY_COMPONENT_NAME} VERSION ${MY_COMPONENT_VERSION} DISPLAY_NAME ${MY_COMPONENT_DESCRIPTION} DESCRIPTION ${MY_COMPONENT_DESCRIPTION})  

install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${MY_COMPONENT_NAME}.exe COMPONENT ${MY_COMPONENT_NAME} DESTINATION ${MY_COMPONENT_NAME})    

cpack_ifw_configure_component(${MY_COMPONENT_NAME} 
    DISPLAY_NAME ${MY_COMPONENT_NAME} 
    DESCRIPTION ${MY_COMPONENT_DESCRIPTION}
    VERSION ${MY_COMPONENT_VERSION}
)
