cmake_minimum_required(VERSION 3.3)

install(FILES lzxcore-tbc2-base.bit lzxcore-tbc2-base.elf DESTINATION firmware/lzxcore-tbc2-base COMPONENT lzxtbc2)

# set(CPACK_COMPONENT_LZXCORE-TBC2-BASE_DISPLAY_NAME "LZX TBC2 Base")
# set(CPACK_COMPONENT_LZXCORE-TBC2-BASE_DESCRIPTION "Base firmware for TBC2.")
# set(CPACK_COMPONENT_LZXCORE-TBC2-BASE_DEPENDS lzxplnx)
# set(CPACK_COMPONENT_LZXCORE-TBC2-BASE_GROUP "Firmware")
